--- a/CarrascalFrancoJoaquin_ProyectoSpring_t2/src/main/resources/templates/changePass.html
+++ b/CarrascalFrancoJoaquin_ProyectoSpring_t2/src/main/resources/templates/changePass.html
@@ -60,6 +60,15 @@
                 </div>
             </div>
 
+            <div class="container">
+                <div class="row justify-content-center mt-4">
+                    <div class="alert alert-info alert-dismissible fade show col-12 col-md-8" role="alert">
+                        <i class="bi bi-info-circle"></i> Como medida de seguridad, se cerrará sesión al efectuar un cambio de contraseña. <i class="bi bi-info-circle"></i> 
+                        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                    </div>
+                </div>
+            </div>
+
         <div class="container-fluid">
 
             <form method="POST" th:action="@{/userMenu/changePass/submit}" th:object="${passForm}" class="my-auto mx-auto w-75 py-4 justify-content-center">
