No entiendo absolutamente nada

--- a/CarrascalFrancoJoaquin_ProyectoSpring_t2/src/main/resources/templates/adminTemplates/adminProfile.html
+++ b/CarrascalFrancoJoaquin_ProyectoSpring_t2/src/main/resources/templates/adminTemplates/adminProfile.html
@@ -37,7 +37,7 @@
 				<!-- <li class="list-group-item text-center fw-bold"> <a class="text-decoration-none text-black" href="/prodForm" th:href="@{/prodForm}"><i class="bi bi-box-arrow-in-up"></i> Dar de alta un servicio <i class="bi bi-box-arrow-in-up"></i></a></li> -->
 				<li class="list-group-item text-center fw-bold"> <a class="text-decoration-none text-black" th:href="@{/admin/prodList}"><i class="bi bi-box-arrow-in-up"></i> Gestión de servicios <i class="bi bi-box-arrow-in-down"></i></a></li>
 				<li class="list-group-item text-center fw-bold"> <a class="text-decoration-none text-black" th:href="@{/admin/reportList}"><i class="bi bi-chat-right-dots"></i> Gestión de reclamaciones <i class="bi bi-chat-left-dots"></i></a></li>
-				<li class="list-group-item text-center fw-bold"> <a class="text-decoration-none text-black" th:href="@{/admin/clientList}"><i class="bi bi-people"></i> Gestión de usuarios <i class="bi bi-people-fill"></i></a></li>
+				<li class="list-group-item text-center fw-bold"> <a class="text-decoration-none text-black" th:href="@{/admin/clientList/}"><i class="bi bi-people"></i> Gestión de usuarios <i class="bi bi-people-fill"></i></a></li>
 			</ul>
 
 		</aside>
