--- a/CarrascalFrancoJoaquin_ProyectoSpring_t2/src/main/resources/templates/login.html
+++ b/CarrascalFrancoJoaquin_ProyectoSpring_t2/src/main/resources/templates/login.html
@@ -50,7 +50,7 @@
 	       </div>
 	
 	       <div class="mt-4 row">
-	           <a class="text-decoration-none col-6" href="/regform" th:href="@{/regform}" target="_self">
+	           <a class="text-decoration-none col-6" href="/regform/" th:href="@{/regform/}" target="_self">
 	               <button type="button" class="btn fondo shadow py-2 rounded-2 mx-0 text-secondary fw-bolder w-100">
 	                   Crear cuenta
 	               </button>
