--- a/CarrascalFrancoJoaquin_ProyectoSpring_t2/src/main/resources/templates/adminTemplates/alertListui.html
+++ b/CarrascalFrancoJoaquin_ProyectoSpring_t2/src/main/resources/templates/adminTemplates/alertListui.html
@@ -31,6 +31,15 @@
 	<a th:href="@{/admin/alertForm}" class="d-block mx-auto mt-3"><button
 			class="btn btn-success m-2">Agregar alerta</button></a>
 
+	<div class="container" th:if="${param.error}">
+		<div class="row justify-content-center">
+			<div class="alert alert-danger alert-dismissible fade show col-12 col-md-6" role="alert">
+				Ésta alerta está activada actualmente en la página, activa otra para poder eliminarla.
+				<button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+			</div>
+		</div>
+	</div>
+
 	<table class="table container-fluid my-4 py-4">
 		<thead>
 			<tr class="row justify-content-center">
