--- a/CarrascalFrancoJoaquin_ProyectoSpring_t2/src/main/resources/templates/adminTemplates/clientListui.html
+++ b/CarrascalFrancoJoaquin_ProyectoSpring_t2/src/main/resources/templates/adminTemplates/clientListui.html
@@ -31,6 +31,15 @@
 	<a href="/regform" th:href="@{/regform}" class="d-block mx-auto mt-3"><button
 			class="btn btn-success m-2">Agregar cliente</button></a>
 
+	<div class="container" th:if="${param.error}">
+		<div class="row justify-content-center">
+			<div class="alert alert-danger alert-dismissible fade show col-12 col-md-6" role="alert">
+				Lo sentimos, debes borrar las reclamaciones y las citas de este cliente antes de borrarlo.
+				<button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+			</div>
+		</div>
+	</div>
+
 	<table class="table container-fluid">
 		
 		<legend class="text-center mt-2">Listado de clientes</legend>
