--- a/CarrascalFrancoJoaquin_ProyectoSpring_t2/src/main/resources/templates/home.html
+++ b/CarrascalFrancoJoaquin_ProyectoSpring_t2/src/main/resources/templates/home.html
@@ -48,13 +48,13 @@
 
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img src="../static/img/carousel-1.png" th:src="@{/img/carousel-1.png}" alt="" class="d-block w-100">
+                <img src="../static/img/carousel-1.png" th:src="@{/img/carousel-1.png}" alt="Fotografías de peinados originales del negocio, con el logo del negocio como marca de agua" class="d-block w-100">
             </div>
             <div class="carousel-item">
-                <img src="../static/img/carousel-2.png" th:src="@{/img/carousel-2.png}" alt="" class="d-block w-100">
+                <img src="../static/img/carousel-2.png" th:src="@{/img/carousel-2.png}" alt="Fotografías de peinados originales del negocio, con el logo del negocio como marca de agua" class="d-block w-100">
             </div>
             <div class="carousel-item">
-                <img src="../static/img/carousel-3.png" th:src="@{/img/carousel-3.png}" alt="" class="d-block w-100">
+                <img src="../static/img/carousel-3.png" th:src="@{/img/carousel-3.png}" alt="Fotografías de peinados originales del negocio, con el logo del negocio como marca de agua" class="d-block w-100">
             </div>
         </div>
 
@@ -78,7 +78,7 @@
 			<div th:each="product : ${productList}" class="mx-1 card d-flex mx-auto border-0 rounded-2 m-3 col-lg-3 col-12 col-md-6 shadow"
 			                style="width: 18rem;" data-aos="flip-left" data-aos-once="false">
 							<!-- <img class="card-img-top mt-3 rounded-3" src="http://placehold.co/500x500" th:src="${product.descImg}" alt="Card image cap"> -->
-							<img class="card-img-top mt-3 rounded-3" th:src="${not (#strings.isEmpty(product.descImg))} ? ${product.descImg} : 'http://placehold.co/500x500'" alt="Card image cap" />
+							<img class="card-img-top mt-3 rounded-3" th:src="${not (#strings.isEmpty(product.descImg))} ? ${product.descImg} : 'http://placehold.co/500x500'" th:alt="${product.alterText}" />
 			                    
 			                <div class="card-body p-3 d-flex flex-column">
 			                    <h5 class="card-title fw-bolder" th:text="${product.name}">Nombre</h5>
