Title, meta description y alternative text on imgs

--- a/CarrascalFrancoJoaquin_ProyectoSpring_t2/src/main/resources/templates/fragments/adminHeader.html
+++ b/CarrascalFrancoJoaquin_ProyectoSpring_t2/src/main/resources/templates/fragments/adminHeader.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+
+    <!--ESTO ES UN FRAGMENTO DE THYMELEAF NO ES UN DOC HTML 
+        USABLE POR SI MISMO, POR ESO NO TIENE LOS CRITERIOS SEO-->
+
 </head>
 <body>
     
@@ -29,7 +33,7 @@
                         <div class="row align-items-center justify-content-start">
                             <a class="navbar-brand col-5 mt-0" href="/" th:href="@{/}">
     
-                                <img src="../static/img/company-logo.png" th:src="@{/img/company-logo.png}" alt="Logo compañía" width="200px">
+                                <img src="../static/img/company-logo.png" th:src="@{/img/company-logo.png}" alt="Logo de la empresa Quiérete Mucho" width="200px">
                             
                             </a>
     
