--- a/CarrascalFrancoJoaquin_ProyectoSpring_t2/src/main/resources/templates/fragments/footer.html
+++ b/CarrascalFrancoJoaquin_ProyectoSpring_t2/src/main/resources/templates/fragments/footer.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+
+    <!--ESTO ES UN FRAGMENTO DE THYMELEAF NO ES UN DOC HTML 
+        USABLE POR SI MISMO, POR ESO NO TIENE LOS CRITERIOS SEO-->
+
 </head>
 <body>
 	
@@ -51,7 +55,7 @@
 	                        <!-- Button trigger modal -->
 	                        <div class="" data-bs-toggle="modal" data-bs-target="#mapaModal">
 	                            <img class="img-fluid" src="https://i.imgur.com/xeadxRn.png" th:src="@{https://i.imgur.com/xeadxRn.png}"
-	                                            alt="mapa de la localización del negocio.">
+	                                            alt="Mapa estático de la localización del negocio.">
 	                        </div>
 	
 	                        <!-- Modal -->
