--- a/CarrascalFrancoJoaquin_ProyectoSpring_t2/src/main/resources/templates/adminTemplates/alertListui.html
+++ b/CarrascalFrancoJoaquin_ProyectoSpring_t2/src/main/resources/templates/adminTemplates/alertListui.html
@@ -5,7 +5,8 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Quiérete Mucho</title>
+	<title>Quiérete Mucho | Listado de alertas</title>
+    <meta name="description" content="Listado de alertas en la sección de administración de la web de Quiérete Mucho.">
 
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
 		integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
