--- a/CarrascalFrancoJoaquin_ProyectoSpring_t2/src/main/resources/templates/changePass.html
+++ b/CarrascalFrancoJoaquin_ProyectoSpring_t2/src/main/resources/templates/changePass.html
@@ -5,7 +5,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Quiérete Mucho</title>
+    <title>Quiérete Mucho | Cambiar contraseña</title>
+    <meta name="description" content="Formulario de edición de contraseña para un usuario.">
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
@@ -45,7 +46,7 @@
 
                 <div class="row justify-content-center mt-5">
 
-                    <img class="col-10 col-md-6 col-xxl-4" src="../static/img/company-logo.png" th:src="@{/img/company-logo.png}" alt="Logo compañía" width="220px">
+                    <img class="col-10 col-md-6 col-xxl-4" src="../static/img/company-logo.png" th:src="@{/img/company-logo.png}" alt="Logo de la empresa Quiérete Mucho" width="220px">
 
                 </div>
 
