Se agregan datos al import.sql

--- a/CarrascalFrancoJoaquin_ProyectoSpring_t2/src/main/resources/templates/adminTemplates/alertListui.html
+++ b/CarrascalFrancoJoaquin_ProyectoSpring_t2/src/main/resources/templates/adminTemplates/alertListui.html
@@ -41,7 +41,7 @@
 		</div>
 	</div>
 
-	<table class="table container-fluid my-4 py-4">
+	<table class="table container-fluid my-4 py-4 table-striped">
 		<thead>
 			<tr class="row justify-content-center">
 				<th class="col-1">ID</th>
