--- a/CarrascalFrancoJoaquin_ProyectoSpring_t2/src/main/resources/templates/adminTemplates/clientListui.html
+++ b/CarrascalFrancoJoaquin_ProyectoSpring_t2/src/main/resources/templates/adminTemplates/clientListui.html
@@ -41,7 +41,7 @@
 		</div>
 	</div>
 
-	<table class="table container-fluid">
+	<table class="table container-fluid table-striped">
 		
 		<legend class="text-center mt-2">Listado de clientes</legend>
 		
