--- a/CarrascalFrancoJoaquin_ProyectoSpring_t2/src/main/resources/templates/adminTemplates/reportListui.html
+++ b/CarrascalFrancoJoaquin_ProyectoSpring_t2/src/main/resources/templates/adminTemplates/reportListui.html
@@ -30,7 +30,7 @@
 <body class=" m-0 border-0 min-vh-100 d-flex flex-column">
 
 
-	<table class="table container-fluid">
+	<table class="table container-fluid table-striped">
 		
 		<legend class="text-center mt-2">Reclamaciones sin contestar</legend>
 		
