--- a/CarrascalFrancoJoaquin_ProyectoSpring_t2/src/main/resources/templates/myReports.html
+++ b/CarrascalFrancoJoaquin_ProyectoSpring_t2/src/main/resources/templates/myReports.html
@@ -52,7 +52,7 @@
 
             </div>
 
-            <table class="table container-fluid">
+            <table class="table container-fluid table-striped">
 		
                 <legend class="text-center mt-2">Mis reclamaciones</legend>
                 
