--- a/CarrascalFrancoJoaquin_ProyectoSpring_t2/src/main/resources/templates/clientProfile.html
+++ b/CarrascalFrancoJoaquin_ProyectoSpring_t2/src/main/resources/templates/clientProfile.html
@@ -35,7 +35,7 @@
 			<h5 class="mt-1 p-2 border-3 border border-primary rounded-pill text-center"><i class="bi bi-arrow-down-right-square"></i> Menú de <span sec:authentication="principal.name">Usuario</span> <i class="bi bi-arrow-up-left-square"></i></h5>
 			<ul class="list-group list-group-flush">
 				<li class="list-group-item text-center fw-bold"> <a class="text-decoration-none text-black" th:href="@{/userMenu/editSelf}"><i class="bi bi-box-arrow-in-up"></i> Editar usuario <i class="bi bi-box-arrow-in-down"></i></a></li>
-				<li class="list-group-item text-center fw-bold"> <a class="text-decoration-none text-black" th:href="@{/userMenu/myReports}"><i class="bi bi-chat-right-dots"></i> Mis reclamaciones <i class="bi bi-chat-left-dots"></i></a></li>
+				<li class="list-group-item text-center fw-bold"> <a class="text-decoration-none text-black" th:href="@{/userMenu/myReports/}"><i class="bi bi-chat-right-dots"></i> Mis reclamaciones <i class="bi bi-chat-left-dots"></i></a></li>
 				<!--<li class="list-group-item text-center fw-bold"> <a class="text-decoration-none text-black" th:href="@{}"><i class="bi bi-people"></i> Gestión de usuarios <i class="bi bi-people-fill"></i></a></li>-->
 			</ul>
 
@@ -52,8 +52,8 @@
 
             </div>
 
-            <div class="container">
-                <div class="row justify-content-center mt-4" th:if="${param.error}">
+            <div class="container" th:if="${param.error}">
+                <div class="row justify-content-center mt-4">
                     <div class="alert alert-danger alert-dismissible fade show col-12 col-md-8" role="alert">
                         ¡Vaya! Parece que el nombre de usuario está siendo utilizado.
                         <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
