--- a/CarrascalFrancoJoaquin_ProyectoSpring_t2/src/main/resources/templates/adminTemplates/alertListui.html
+++ b/CarrascalFrancoJoaquin_ProyectoSpring_t2/src/main/resources/templates/adminTemplates/alertListui.html
@@ -18,7 +18,6 @@
 
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 
-
 </head>
 
 <!--Menú de navegación-->
@@ -58,8 +57,31 @@
 				<td class="col-2" th:text="${alert.name}">Nombre</td>
 				<td class="col-5" th:text="${alert.description}">Descripcion</td>
 				<td class="col-1 text-center"><a th:href="@{/admin/editAlert/{id}(id=${alert.id})}"><button class="btn btn-primary p-1"><i class="bi bi-pencil-square"></i></button></a></td>
-				<td class="col-1 text-center"><a th:href="@{/admin/deleteAlert/{id}(id=${alert.id})}"><button class="btn btn-danger p-1"><i class="bi bi-trash3"></i></button></a></td>
+				<td class="col-1 text-center"><button class="btn btn-danger p-1" type="button" data-bs-toggle="modal" data-bs-target="#delete-modal" th:attr="data-bs-target='#delete-modal'+${alert.id}"><i class="bi bi-trash3"></i></button></td>
 				<td class="col-1 text-center"><a th:href="@{/admin/activateAlert/{id}(id=${alert.id})}"><button class="btn btn-success p-1"><i class="bi bi-arrow-90deg-up"></i></button></a></td>
+
+				<!--Modal de confirmación de borrado-->
+				<div class="modal fade" th:attr="id='delete-modal'+${alert.id}" role="dialog">
+					<div class="modal-dialog" role="document" th:attr="id='delete-modal'+${alert.id}">
+						<div class="modal-content">
+							<div class="modal-header">
+								<h4 class="modal-title">Borrar alerta</h4>
+								<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close" aria-hidden="true"></button>
+							</div>
+							<div class="modal-body container">
+								<div class="row">
+									<p>Pulsando el botón <span class="fw-bold">"Sí"</span> eliminará ésta alerta de forma permanente, ¿está seguro?</p>
+								</div>
+								<div class="row justify-content-center">
+									<button type="button" class="btn shadow border border-1 border-success col-2 mx-2" data-bs-dismiss="modal">No</button>
+									<a class="btn shadow border border-1 border-danger px-3 col-2 mx-2" th:attr="href='/admin/deleteAlert/'+${alert.id}">Sí</a>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+				<!--Modal de confirmación de borrado-->
+				
 			</tr>
 		</tbody>
 	</table>
