--- a/CarrascalFrancoJoaquin_ProyectoSpring_t2/src/main/resources/templates/adminTemplates/clientListui.html
+++ b/CarrascalFrancoJoaquin_ProyectoSpring_t2/src/main/resources/templates/adminTemplates/clientListui.html
@@ -68,7 +68,30 @@
 				<th class="col-1 text-center" th:text="${client.telNumber}">Número tlf</th>
 				<th class="col-1 text-center" th:text="${client.address}">Dirección</th>
 				<td class="col-1 text-center"><a th:href="@{/admin/editClient/{id}(id=${client.id})}"><button class="btn btn-primary p-1"><i class="bi bi-pencil-square"></i></button></a></td>
-				<td class="col-1 text-center"><a th:href="@{/admin/deleteClient/{id}(id=${client.id})}"><button class="btn btn-danger p-1"><i class="bi bi-trash3"></i></button></a></td>
+				<td class="col-1 text-center"><button class="btn btn-danger p-1" data-bs-toggle="modal" data-bs-target="#delete-modal" th:attr="data-bs-target='#delete-modal'+${client.id}"><i class="bi bi-trash3"></i></button></td>
+
+				<!--Modal de confirmación de borrado-->
+				<div class="modal fade" th:attr="id='delete-modal'+${client.id}" role="dialog">
+					<div class="modal-dialog" role="document" th:attr="id='delete-modal'+${client.id}">
+						<div class="modal-content">
+							<div class="modal-header">
+								<h4 class="modal-title">Borrar cliente</h4>
+								<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close" aria-hidden="true"></button>
+							</div>
+							<div class="modal-body container">
+								<div class="row">
+									<p>Pulsando el botón <span class="fw-bold">"Sí"</span> eliminará éste cliente de forma permanente, ¿está seguro?</p>
+								</div>
+								<div class="row justify-content-center">
+									<button type="button" class="btn shadow border border-1 border-success col-2 mx-2" data-bs-dismiss="modal">No</button>
+									<a class="btn shadow border border-1 border-danger px-3 col-2 mx-2" th:attr="href='/admin/deleteClient/'+${client.id}">Sí</a>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+				<!--Modal de confirmación de borrado-->
+
 			</tr>
 		</tbody>
 	</table>
