--- a/CarrascalFrancoJoaquin_ProyectoSpring_t2/src/main/resources/templates/adminTemplates/productListui.html
+++ b/CarrascalFrancoJoaquin_ProyectoSpring_t2/src/main/resources/templates/adminTemplates/productListui.html
@@ -36,26 +36,48 @@
 
             <div class="row d-flex mx-auto">
 			
-                <div th:each="product : ${productList}" class="card d-flex mx-auto border-0 rounded-2 m-3 col-lg-3 col-12 col-md-6 shadow"
-                                style="width: 18rem;">
-                                <!-- <img class="card-img-top mt-3 rounded-3" src="http://placehold.co/500x500" th:src="${product.descImg}" alt="Card image cap"> -->
-								<img th:src="${not (#strings.isEmpty(product.descImg))} ? ${product.descImg} : 'http://placehold.co/500x500'" th:alt="${product.alterText}" />
-			                    	
-                                <div class="card-body p-3 d-flex flex-column">
-                                    <h5 class="card-title fw-bolder" th:text="${product.name}">Nombre</h5>
-                                    <p class="card-text fw-lighter fst-italic" th:text="${product.description}">
-                                        Texto de descripcion.
-                                    </p>
-                                    <div class="d-flex flex-column mt-auto mb-0 container">
-                                        <div class="row">
-                                            <p class="text-end">PVP: <span th:text="${product.basePrice}">precio</span>€</p>
-                                        </div>
-                                        <div class="row justify-content-">
-                                            <a class="col-6 p-1 px-3" th:href="@{/admin/editProduct/{id}(id=${product.id})}"><button class="btn btn-primary d-block mx-auto"><i class="bi bi-pencil-square"></i></button></a>
-				                            <a class="col-6 p-1 px-3" th:href="@{/admin/deleteProduct/{id}(id=${product.id})}"><button class="btn btn-danger d-block mx-auto"><i class="bi bi-trash3"></i></button></a>
-                                        </div>
+                <div th:each="product : ${productList}" class="card d-flex mx-auto border-0 rounded-2 m-3 col-lg-3 col-12 col-md-6 shadow" style="width: 18rem;">
+                    <!-- <img class="card-img-top mt-3 rounded-3" src="http://placehold.co/500x500" th:src="${product.descImg}" alt="Card image cap"> -->
+                    <img th:src="${not (#strings.isEmpty(product.descImg))} ? ${product.descImg} : 'http://placehold.co/500x500'" th:alt="${product.alterText}" />
+                        
+                    <div class="card-body p-3 d-flex flex-column">
+                        <h5 class="card-title fw-bolder" th:text="${product.name}">Nombre</h5>
+                        <p class="card-text fw-lighter fst-italic" th:text="${product.description}">
+                            Texto de descripcion.
+                        </p>
+                        <div class="d-flex flex-column mt-auto mb-0 container">
+                            <div class="row">
+                                <p class="text-end">PVP: <span th:text="${product.basePrice}">precio</span>€</p>
+                            </div>
+                            <div class="row justify-content-">
+                                <a class="col-6 p-1 px-3" th:href="@{/admin/editProduct/{id}(id=${product.id})}"><button class="btn btn-primary d-block mx-auto"><i class="bi bi-pencil-square"></i></button></a>
+				                <a class="col-6 p-1 px-3" data-bs-toggle="modal" data-bs-target="#delete-modal" th:attr="data-bs-target='#delete-modal'+${product.id}"><button class="btn btn-danger d-block mx-auto"><i class="bi bi-trash3"></i></button></a>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!--Modal de confirmación de borrado-->
+                    <div class="modal fade" th:attr="id='delete-modal'+${product.id}" role="dialog">
+                        <div class="modal-dialog" role="document" th:attr="id='delete-modal'+${product.id}">
+                            <div class="modal-content">
+                                <div class="modal-header">
+                                    <h4 class="modal-title">Borrar producto</h4>
+                                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close" aria-hidden="true"></button>
+                                </div>
+                                <div class="modal-body container">
+                                    <div class="row">
+                                        <p>Pulsando el botón <span class="fw-bold">"Sí"</span> eliminará éste producto de forma permanente, ¿está seguro?</p>
+                                    </div>
+                                    <div class="row justify-content-center">
+                                        <button type="button" class="btn shadow border border-1 border-success col-2 mx-2" data-bs-dismiss="modal">No</button>
+                                        <a class="btn shadow border border-1 border-danger px-3 col-2 mx-2" th:attr="href='/admin/deleteProduct/'+${product.id}">Sí</a>
                                     </div>
                                 </div>
+                            </div>
+                        </div>
+                    </div>
+                    <!--Modal de confirmación de borrado-->
+
                 </div>
                 
             </div>
