--- a/CarrascalFrancoJoaquin_ProyectoSpring_t2/src/main/resources/templates/adminTemplates/reportListui.html
+++ b/CarrascalFrancoJoaquin_ProyectoSpring_t2/src/main/resources/templates/adminTemplates/reportListui.html
@@ -53,7 +53,30 @@
 				<td class="col-2 text-center" th:text="${report.client.name} + ' ' + ${report.client.userLastName}">Cliente</td>
                 <td class="col-2 text-center" th:text="${#temporals.format(report.reportDate)}">Fecha</td>
 				<td class="col-1 text-center"><a th:href="@{/admin/replyReport/{id}(id=${report.id})}"><button class="btn btn-success p-1"><i class="bi bi-chat-dots"></i></button></a></td>
-				<td class="col-1 text-center"><a th:href="@{/admin/deleteReport/{id}(id=${report.id})}"><button class="btn btn-danger p-1"><i class="bi bi-trash3"></i></button></a></td>
+				<td class="col-1 text-center"><button class="btn btn-danger p-1" data-bs-toggle="modal" data-bs-target="#delete-modal" th:attr="data-bs-target='#delete-modal'+${report.id}"><i class="bi bi-trash3"></i></button></td>
+
+				<!--Modal de confirmación de borrado-->
+				<div class="modal fade" th:attr="id='delete-modal'+${report.id}" role="dialog">
+					<div class="modal-dialog" role="document" th:attr="id='delete-modal'+${report.id}">
+						<div class="modal-content">
+							<div class="modal-header">
+								<h4 class="modal-title">Borrar reclamación</h4>
+								<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close" aria-hidden="true"></button>
+							</div>
+							<div class="modal-body container">
+								<div class="row">
+									<p>Pulsando el botón <span class="fw-bold">"Sí"</span> eliminará éste reclamación de forma permanente, ¿está seguro?</p>
+								</div>
+								<div class="row justify-content-center">
+									<button type="button" class="btn shadow border border-1 border-success col-2 mx-2" data-bs-dismiss="modal">No</button>
+									<a class="btn shadow border border-1 border-danger px-3 col-2 mx-2" th:attr="href='/admin/deleteReport/'+${report.id}">Sí</a>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+				<!--Modal de confirmación de borrado-->
+
 			</tr>
 		</tbody>
 	</table>
