--- a/CarrascalFrancoJoaquin_ProyectoSpring_t2/src/main/resources/templates/register.html
+++ b/CarrascalFrancoJoaquin_ProyectoSpring_t2/src/main/resources/templates/register.html
@@ -19,6 +19,7 @@
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 
+	<script src="../static/js/regValidation.js" th:src="@{/js/regValidation.js}" defer></script>
 
 </head>
 
@@ -38,8 +39,16 @@
 			</div>
 		</div>
 	</div>
+	<div class="container d-none" id="alertFormNotValid">
+		<div class="row justify-content-center">
+			<div class="alert alert-danger alert-dismissible fade show col-12 col-md-6" role="alert">
+				¡Vaya! Lo sentimos, pero parece que los datos no son los esperados.
+				<button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+			</div>
+		</div>
+	</div>
 
-	<form method="POST" th:action="${clientRegForm.id != null} ? @{/admin/editClient/submit} : @{/addClient/submit}" th:object="${clientRegForm}" class="my-auto mx-auto w-75 py-4">
+	<form method="POST" th:action="${clientRegForm.id != null} ? @{/admin/editClient/submit} : @{/addClient/submit}" th:object="${clientRegForm}" class="my-auto mx-auto w-75 py-4" id="regForm" name="regForm">
 	
 	        <legend class="text-center mb-3 fw-lighter" th:text="${legend}"></legend>
 	
@@ -78,14 +87,20 @@
 	
 	                <div class="my-1 col-12 col-md-6">
 	                    <label for="password" class="form-label" th:unless="${adminEditing}">Contraseña<sup class="text-danger">*</sup></label>
-	                    <input type="password" class="form-control p-2" id="password" placeholder="************"
-	                        name="password" th:field="*{password}" required th:type="${visibility}">
+						<div class="input-group">
+							<input type="password" class="form-control p-2" id="password" placeholder="************"
+							name="password" th:field="*{password}" required th:type="${visibility}">
+							<div class="input-group-text"><i class="bi bi-eye"></i></div>
+						</div>
 	                </div>
 	
 	                <div class="my-1 col-12 col-md-6">
 	                    <label for="password2" class="form-label" th:unless="${adminEditing}">Repetir contraseña<sup class="text-danger">*</sup></label>
-	                    <input type="password" class="form-control p-2" id="password2" placeholder="************"
+						<div class="input-group">
+	                    	<input type="password" class="form-control p-2" id="password2" placeholder="************"
 	                        name="password2" th:type="${visibility}">
+							<div class="input-group-text"><i class="bi bi-eye"></i></div>
+						</div>
 	                </div>
 	
 	            </div>
@@ -127,11 +142,11 @@
 	                    Iniciar sesión
 	                </button>
 	            </a>
-	            <input type="submit" value="Crear cuenta" class="col-6 btn fondo shadow py-2 rounded-2 mx-0 "></input>
+	            <button type="button" name="submitButton" class="col-6 btn fondo shadow py-2 rounded-2 mx-0 ">Crear cuenta</button>
 	        </div>
 			<div class="mt-4 row justify-content-center" th:if="${adminEditing}">
 
-				<input type="submit" value="Editar cuenta" class="col-5 col-xl-3 btn fondo shadow py-2 rounded-2 mx-0 text-center"></input>
+				<button type="button" name="submitButton2" class="col-5 col-xl-3 btn fondo shadow py-2 rounded-2 mx-0 text-center">Editar cuenta</button>
 
 			</div>
 	
