--- a/CarrascalFrancoJoaquin_ProyectoSpring_t2/src/main/resources/templates/fragments/clientMenuAside.html
+++ b/CarrascalFrancoJoaquin_ProyectoSpring_t2/src/main/resources/templates/fragments/clientMenuAside.html
@@ -13,6 +13,7 @@
         <ul class="list-group list-group-flush">
             <li class="list-group-item text-center fw-bold"> <a class="text-decoration-none text-black" th:href="@{/userMenu/editSelf}"><i class="bi bi-box-arrow-in-up"></i> Editar usuario <i class="bi bi-box-arrow-in-down"></i></a></li>
             <li class="list-group-item text-center fw-bold"> <a class="text-decoration-none text-black" th:href="@{/userMenu/myReports/}"><i class="bi bi-chat-right-dots"></i> Mis reclamaciones <i class="bi bi-chat-left-dots"></i></a></li>
+            <li class="list-group-item text-center fw-bold"> <a class="text-decoration-none text-black" th:href="@{/userMenu/myAppointments/}"><i class="bi bi-bookmarks"></i> Mis citas <i class="bi bi-bookmarks"></i></a></li>
         </ul>
 
     </aside>
