--- a/CarrascalFrancoJoaquin_ProyectoSpring_t2/src/main/resources/templates/home.html
+++ b/CarrascalFrancoJoaquin_ProyectoSpring_t2/src/main/resources/templates/home.html
@@ -90,8 +90,8 @@
 			                    </p>
 			                    <div class="d-flex flex-column mt-auto mb-0">
 			                        <p class="text-end">PVP: <span th:text="${product.basePrice}">precio</span>€</p>
-			                        <a href="" sec:authorize="isAuthenticated()" class="btn btn-success rounded-2">Pide cita</a>
-                                    <a href="/login" th:href="@{/login}" sec:authorize="!isAuthenticated()" class="btn btn-warning rounded-2">Pide cita</a>
+			                        <a th:href="@{/userMenu/myAppointments/add/{id}(id=${product.id})}" sec:authorize="isAuthenticated()" class="btn btn-success rounded-2">Pide cita</a>
+                                    <a href="/login" th:href="@{/login}" sec:authorize="!isAuthenticated()" class="btn btn-warning rounded-2">Inicia sesión</a>
 			                    </div>
 			                </div>
 			</div>
