vista del carrito y cambios de accesibilidad al mismo.

--- a/CarrascalFrancoJoaquin_ProyectoSpring_t2/src/main/resources/templates/myAppointments.html
+++ b/CarrascalFrancoJoaquin_ProyectoSpring_t2/src/main/resources/templates/myAppointments.html
@@ -49,7 +49,7 @@
             
             <table class="table container-fluid table-striped">
 		
-                <legend class="text-center mt-2">Mis reclamaciones</legend>
+                <legend class="text-center mt-2">Mis pedidos</legend>
                 
                 <thead>
                     <tr class="row justify-content-center">
