se añade la posibilidad de borrar directamente una linea de venta

--- a/CarrascalFrancoJoaquin_ProyectoSpring_t2/src/main/resources/templates/fragments/header.html
+++ b/CarrascalFrancoJoaquin_ProyectoSpring_t2/src/main/resources/templates/fragments/header.html
@@ -79,7 +79,7 @@
 							</button>
 	
 							<button class="rounded-3 border-0 btn mx-1 " type="button">
-								<a href="/loggedUser/showCart" th:href="@{/loggedUser/showCart}"><i class="bi bi-cart text-align-center text-dark fs-3"></i></a>
+								<a href="/loggedUser/showCart/" th:href="@{/loggedUser/showCart/}"><i class="bi bi-cart text-align-center text-dark fs-3"></i></a>
 							</button>
 	
 						</form>
