--- a/CarrascalFrancoJoaquin_ProyectoSpring_t2/src/main/resources/templates/shoppingCart.html
+++ b/CarrascalFrancoJoaquin_ProyectoSpring_t2/src/main/resources/templates/shoppingCart.html
@@ -62,6 +62,7 @@
                         <th class="col-3 text-center">Nombre servicio</th>
                         <th class="col-3 text-center">Cantidad</th>
                         <th class="col-2 text-center">Subtotal</th>
+                        <td class="col-1 text-center mt-0"></td>
                     </tr>
                 </thead>
                 <tbody>
@@ -82,6 +83,7 @@
                             </a>
                         </td>
                         <td class="col-2 text-center mt-0"><span th:text="${#numbers.formatDecimal(apLine.subTotal,0,2)}"></span>€</td>
+                        <td class="col-1 text-center mt-0"><a th:href="@{/loggedUser/showCart/hardDeleteApLine/{id}(id=${apLine.id})}"><button class="btn btn-danger border p-1 py-0 shadow"><i class="bi bi-backspace"></i></button></a></td>
                     </tr>
                 </tbody>
                 <tfoot>
@@ -90,6 +92,7 @@
                         <td class="col-4 text-center mt-0"></td>
                         <td class="col-2 text-center mt-0">Total:</td>
                         <td class="col-2 text-center mt-0"><span th:text="${appointFullPrice}"></span>€</td>
+                        <td class="col-1 text-center mt-0"></td>
                     </tr>
                 </tfoot>
             </table>
